Stop aligning text to see how it display on phone

--- a/week02/styles/media-query.css
+++ b/week02/styles/media-query.css
@@ -12,7 +12,7 @@ footer {
     border: 1px solid rgb(84, 84, 147);
     background-color: rgb(196, 196, 230);
     border-radius: 4px;
-    text-align: center;
+  
    
 
 }
